<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioGuide</string>
    <string name="title_section1">Tracks</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">GeTS</string>
    <string name="title_section4">About</string>
    <string name="title_section5">Settings</string>
    <string name="title_section6">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_file_chooser">Choose File</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="delete_track_server">From server</string>
    <string name="delete_track_local">Local</string>
    <string name="delete_track">Delete track</string>

    <string-array name="track_spinner_array">
        <item>All</item>
        <item>Private</item>
        <item>Public</item>
        <item>Local</item>
        <item>Active</item>
    </string-array>

    <string name="pref_seek_bar_summary_stub">Play sound if point nearer than meters</string>
    <string name="pref_load_radius_summary_stub">Load points nearer than kilometers</string>

    <plurals name="pref_seek_bar_summary">
        <item quantity="one">Play sound if point nearer than %d meter</item>
        <item quantity="other">Play sound if point nearer than %d meters</item>
    </plurals>
    <plurals name="pref_load_radius_summary">
        <item quantity="one">Load points nearer than %d kilometer</item>
        <item quantity="other">Load points nearer than %d kilometers</item>
    </plurals>

    <string name="pref_wake_mode_summary">Keep device awake while tracking</string>
    <string name="pref_wake_mode_title">Wake mode</string>
    <string name="pref_clean_obsolete">Clean obsolete points</string>
    <string name="pref_distance">Load radius</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_disable_warn_providers">Disabled providers</string>
    <string name="pref_disable_warn_providers_sum">Don\'t warn about disabled location providers</string>
    <string name="pref_disable_warn_network_sum">Don\'t warn about offline network</string>
    <string name="pref_disable_warn_network">Unavailable network</string>
    <string name="warn_no_providers">No location providers enabled</string>
    <string name="warn_no_network">Network not available</string>
    <string name="str_configure">Configure</string>
    <string name="str_ignore">Don\'t show this dialog again</string>
    <string name="title_activity_help">Help</string>
    <string name="str_filter">Filter</string>
    <string name="str_add_track">Add track</string>
    <string name="str_add_point">Add point</string>
    <string name="str_search">Search</string>
    <string name="str_place_here">Place here</string>
    <string name="str_find_me">Find me</string>
    <string name="str_stop_track_mode">Stop track mode</string>
    <string name="str_autoplay">Follow</string>
    <string name="str_show_on_map">Show on map</string>
    <string name="str_add_to_track">Add to track</string>
    <string name="str_edit">Edit</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_save">Save</string>
    <string name="str_start_track">Start</string>
    <string name="str_save_track">Save</string>
    <string name="str_delete_track">Delete</string>
    <string name="str_title">Title</string>
    <string name="str_description">Description</string>
    <string name="str_select_category">Select category</string>
    <string name="about_text">This application is a part of grant KA332 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland. </string>

    <string name="str_logout">Logout</string>
    <string name="str_login">Sign in</string>
    <string name="str_login_web_browser">Web browser</string>
    <string name="str_login_google">Google</string>
    <string name="str_google_login_web_error">Unknown login error.</string>
    <string name="str_google_login_error">Can\'t login using android account. Try web browser method.</string>
    <string name="str_google_login_success">Login successful</string>



    <string name="str_not_signed_in">Not signed in</string>
    <string name="help_sound">Sound</string>
    <string name="help_sound_desc">Use this button to start sound automatically</string>
    <string name="help_refresh">Refresh</string>
    <string name="help_refresh_desc">Press to refresh list of tracks or points</string>
    <string name="help_filter">Filter</string>
    <string name="help_filter_desc">Use \"Filter\" to show tracks or points from selected categories</string>
    <string name="help_tracks">Tracks</string>
    <string name="help_tracks_desc">Press \"Add\" button to create track</string>
    <string name="help_track_menu">Track menu</string>
    <string name="help_track_menu_desc">Long press to show track\'s menu</string>
    <string name="help_activate">Activate</string>
    <string name="help_activate_desc">Show track on map hiding unrelated points</string>
    <string name="help_save">Save</string>
    <string name="help_save_desc">Save content of track to your device</string>
    <string name="help_delete">Delete</string>
    <string name="help_delete_desc">Delete track. AudioGuide will ask you delete track locally or on remote server</string>
    <string name="help_modes">Modes</string>
    <string name="help_modes_desc">Map has two modes: track and points</string>
    <string name="help_track_mode">Track mode</string>
    <string name="help_track_mode_desc">In track mode map shows only active track. Track mode can be switched from menu or from track window by selecting \"Activate\" option from track\'s menu. Track mode can be deactivated by choosing menu button</string>
    <string name="help_points_mode">Point mode</string>
    <string name="help_points_mode_desc">Show all loaded points</string>
    <string name="help_search">Search</string>
    <string name="help_search_desc">Search near points. Searching radius can be adjusted in settings window</string>
    <string name="help_place_here">Place here</string>
    <string name="help_place_here_desc">Set position to current map center</string>
    <string name="help_add_point">Add point</string>
    <string name="help_add_point_desc">Create new point</string>
    <string name="help_point_menu">Point menu</string>
    <string name="help_point_menu_desc">Long press point to access point menu</string>
    <string name="help_add_to_track">Add to track</string>
    <string name="help_add_to_track_desc">Add point to track</string>
    <string name="help_desc">Edit</string>
    <string name="help_desc_desc">Edit point description, image and audio</string>
    <string name="store_30chars_name">Audio guide</string>
    <string name="store_80chars_desc">Create and use audio guides for free. Application based on geo2tag LBS platform</string>
    <string name="store_desc">The application will provide access to audio guides storage. The Geo tags and links to audio tracks are stored into open source LBS platform Geo2tag.
Application works in two modes: free walk and listen guide. In first mode each audio track will play when mobile phone reach corresponding point. In second mode application plays only tracks in guide.
Application provides off-line mode, when guides and tracks was downloaded before walk.
You can create own private audio guide using web interface: http://gets.cs.petrsu.ru/gets/web-client/tracks.php The authentication is organized by Google Open ID.
This application is a part of grant KA322 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland.</string>
    <string name="str_points_mode">Point mode</string>
    <string name="str_tracks_mode">Tracks mode</string>
    <string name="pref_seek_bar_title">Range</string>
    <string name="str_version">Version:</string>
    <string name="stop_audio">Stop</string>
    <string name="play_audio">Play</string>
    <string name="pause_audio">Pause</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>

</resources>
