<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <org.fruct.oss.audioguide.preferences.SliderPreference
        android:title="@string/pref_seek_bar_title"

        android:summary="@string/pref_seek_bar_summary_stub"
        android:text="@plurals/pref_seek_bar_summary"

        android:key="pref_range"
        android:max="1000"
        android:defaultValue="50"/>

    <CheckBoxPreference
        android:title="@string/pref_wake_mode_title"
        android:summary="@string/pref_wake_mode_summary"
        android:key="pref_wake"
        android:defaultValue="true"
        />

    <org.fruct.oss.audioguide.preferences.SliderPreference
        android:title="@string/pref_distance"

        android:summary="@string/pref_load_radius_summary_stub"
        android:text="@plurals/pref_load_radius_summary"

        android:key="pref_load_radius"
        android:max="1000"
        android:defaultValue="500"
        exponential="false"
        />

    <Preference
        android:title="@string/pref_clean_obsolete"
        android:key="pref_clean_points"
        android:enabled="true"
        />
</PreferenceScreen>