<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:hint="@string/str_title"

        android:id="@+id/edit_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:hint="@string/str_description"

        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_description"/>

    <EditText
        android:hint="URL"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:id="@+id/edit_url"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/category_title"
            android:layout_centerVertical="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_select_category"/>
    </RelativeLayout>
</LinearLayout>